AggregateRoots persisted through a single Repository for the root.  Reduce boilderplate in JpaMapper.